# sim1h

./: CHANGELOG-UNRELEASED.md  CHANGELOG.md  Cargo.toml  README.md  config.nix  default.nix  readme.md
.circleci/: config.yml  nix.conf
crates/sim1h/: Cargo.toml
crates/sim1h/src/: lib.rs  main.rs
crates/sim1h/src/agent/: fixture.rs  mod.rs
crates/sim1h/src/aspect/: fixture.rs  mod.rs
crates/sim1h/src/dht/bbdht/: mod.rs
crates/sim1h/src/dht/bbdht/dynamodb/: mod.rs
crates/sim1h/src/dht/bbdht/dynamodb/account/: mod.rs
crates/sim1h/src/dht/bbdht/dynamodb/api/: mod.rs
crates/sim1h/src/dht/bbdht/dynamodb/api/agent/: inbox.rs  mod.rs  read.rs  write.rs
crates/sim1h/src/dht/bbdht/dynamodb/api/aspect/: mod.rs  read.rs  write.rs
crates/sim1h/src/dht/bbdht/dynamodb/api/item/: mod.rs  read.rs  write.rs
crates/sim1h/src/dht/bbdht/dynamodb/api/space/: create.rs  exist.rs  mod.rs
crates/sim1h/src/dht/bbdht/dynamodb/api/table/: create.rs  delete.rs  describe.rs  exist.rs  fixture.rs  list.rs  mod.rs
crates/sim1h/src/dht/bbdht/dynamodb/client/: connection.rs  fixture.rs  local.rs  mod.rs
crates/sim1h/src/dht/bbdht/dynamodb/schema/: cas.rs  fixture.rs  mod.rs
crates/sim1h/src/dht/bbdht/error/: mod.rs
crates/sim1h/src/entry/: fixture.rs  mod.rs
crates/sim1h/src/ghost_actor/: mod.rs
crates/sim1h/src/log/: mod.rs
crates/sim1h/src/network/: fixture.rs  mod.rs
crates/sim1h/src/space/: fixture.rs  mod.rs
crates/sim1h/src/workflow/: bootstrap.rs  fetch_entry.rs  fixture.rs  hold_entry.rs  join_space.rs  leave_space.rs  mod.rs  publish_entry.rs  query_entry.rs  send_direct_message.rs  state.rs
crates/sim1h/src/workflow/from_client/: bootstrap.rs  fetch_entry.rs  fixture.rs  hold_entry.rs  join_space.rs  leave_space.rs  publish_entry.rs  query_entry.rs  send_direct_message.rs
crates/sim1h/src/workflow/to_client/: connected.rs  disconnected.rs  handle_drop_entry.rs  handle_fetch_entry.rs  handle_get_authoring_entry_list.rs  handle_get_gossiping_entry_list.rs  handle_query_entry.rs  handle_send_direct_message.rs  handle_store_entry_aspect.rs  mod.rs  send_direct_message_result.rs
crates/sim1h/src/workflow/to_client_response/: handle_drop_entry_result.rs  handle_fetch_entry_result.rs  handle_get_authoring_entry_list_result.rs  handle_get_gossiping_entry_list_result.rs  handle_query_entry_result.rs  handle_send_direct_message_result.rs  handle_store_entry_aspect_result.rs
crates/sim3h/: Cargo.toml
crates/sim3h/src/: lib.rs
crates/sim3h/src/dht/: mod.rs
crates/sim3h/src/dht/bbdht/dynamodb/: client.rs  local.rs  mod.rs
crates/sim3h/src/dht/bbdht/dynamodb/api/: create_table.rs  delete_table.rs  fixture.rs  list_tables.rs  mod.rs
crates/sim3h/src/dht/bbdht/dynamodb/api/table/: create.rs  describe.rs  exist.rs
crates/sim3h/src/dht/bbdht/dynamodb/client/: local.rs  mod.rs
crates/sim3h/src/workflow/: mod.rs
scripts/nix/: config.nix
