[package]
name = "sim1h"
version = "0.0.1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "A simulation of lib3h"
keywords = ["holochain", "holo", "p2p", "network", "simulation"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "readme.md"
documentation = "https://github.com/holochain/sim1h"
repository = "https://github.com/holochain/sim1h"

[dependencies]
rusoto_core = "=0.40.0"
rusoto_dynamodb = "=0.40.0"
dynomite = "=0.5"
futures = "=0.1.21"
lib3h = { git = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
lib3h_protocol = { git = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
lib3h_zombie_actor = { git = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
detach = { git = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
uuid = { version = "=0.4", features = ["v4"] }
log = "=0.4.8"
env_logger = "=0.6.2"
lazy_static = "=1.2.0"
holochain_persistence_api = "=0.0.8"
holochain_json_api = "=0.0.17"
url = "=1.7.2"
