[package]
name = "sim3h"
version = "0.0.1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "A simulation of lib3h"
keywords = ["holochain", "holo", "p2p", "network", "simulation"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "readme.md"
documentation = "https://github.com/holochain/sim3h"
repository = "https://github.com/holochain/sim3h"

[dependencies]
rusoto_core = "=0.40.0"
rusoto_dynamodb = "=0.40.0"
dynomite = "=0.5"
tokio = "=0.1.22"
